# OpenGLStarter

./: .gitignore  OpenGLStarter.sln  README.md
OpenGLStarter/: CMakeLists.txt  OpenGLStarter.vcxproj  OpenGLStarter.vcxproj.filters
OpenGLStarter/src/: Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  camera.cpp  camera.h  glad.c  utils.cpp  utils.h
OpenGLStarter/src/1.getting_started/1.1.hello_window/: hello_window.cpp
OpenGLStarter/src/1.getting_started/1.2.hello_triangle/: hello_triangle.cpp
OpenGLStarter/src/1.getting_started/1.3.textures/: textured_rect.cpp
OpenGLStarter/src/1.getting_started/1.4.transformations/: transforms_exercise.cpp
OpenGLStarter/src/1.getting_started/1.5.coordinate_systems/: projections.cpp  projections_3D.cpp  projections_multiple.cpp
OpenGLStarter/src/1.getting_started/1.6.camera/: camera_tests.cpp
OpenGLStarter/src/2.lighting_systems/2.1.lighting_scene/: basic_lighting.cpp  lighting_scene.cpp
OpenGLStarter/src/2.lighting_systems/2.2.materials/: diffuse_maps.cpp  light_casting.cpp  materials_scene.cpp  multiple_lights.cpp
OpenGLStarter/src/3.model_loading/: model_loading.cpp
OpenGLStarter/src/4.advanced_testing/: blending.cpp  cubemapping.cpp  depth_stencil_testing.cpp  face_culling.cpp  framebuffer_test.cpp  geometry_explosion.cpp  geometry_shading.cpp  instanced_arrays.cpp  instancing.cpp  normals_visualization.cpp  uniform_buffers.cpp
OpenGLStarter/src/5.advanced_instancing/: asteroid_belt_instanced.cpp  asteroid_belt_non_instanced.cpp  instanced_arrays.cpp  instancing.cpp
OpenGLStarter/src/6.anti_aliasing/: msaa_test.cpp  msaa_test_refactored.cpp
OpenGLStarter/src/7.advanced_lighting/: blinn_shading.cpp
OpenGLStarter/src/shaders/: shader.cpp  shader.h
OpenGLStarter/src/shaders/advanced_lighting/: blinn_shading.frag
OpenGLStarter/src/shaders/cubemapping/: cubemap.vert  reflection.frag  reflection.vert  refraction.frag
OpenGLStarter/src/shaders/geometry_shaders/: explode.geom  house.geom  line.frag  line.geom  model_vert.vert  vertex.vert  visual_normal.geom  visual_normal.vert
OpenGLStarter/src/shaders/gradient/: gradient.frag  gradient.vert
OpenGLStarter/src/shaders/instancing/: asteroid_instancing.vert  instance_arrays.vert  instancing.vert
OpenGLStarter/src/shaders/light_casting/: light_casting.frag
OpenGLStarter/src/shaders/lighting/: diffuse.frag
OpenGLStarter/src/shaders/material_samples/: diff_spec_sampling.frag  diffuse_map.frag  material.frag
OpenGLStarter/src/shaders/model_loading/: base_material.frag
OpenGLStarter/src/shaders/post_processing/: outlines.frag
OpenGLStarter/src/shaders/projections/: projections.vert  texturing_only.frag
OpenGLStarter/src/shaders/shader_testing/: blend_testing.frag  blue.frag  depth_testing.frag  framebuffer_quad.frag  framebuffer_quad.vert  stencil_outline.frag  uniform_buffer.vert  yellow.frag
OpenGLStarter/src/shaders/texture_sampling/: texturing.frag  texturing.vert
OpenGLStarter/src/stb/: stb_image.h
